# event_marketing_intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run_tests.py  simulate_run.py  test_workflow.py
event_marketing_agent/: __init__.py  agent.py  channels.json  config.py  prompt.py
event_marketing_agent/sub_agents/: __init__.py
event_marketing_agent/sub_agents/creative_studio/: __init__.py  agent.py  prompt.py
event_marketing_agent/sub_agents/data_budget/: __init__.py  agent.py  prompt.py
event_marketing_agent/sub_agents/risk_compliance/: __init__.py  agent.py  prompt.py
event_marketing_agent/tools/: __init__.py  budget_tools.py  compliance_tools.py
