[project]
name = "event-marketing-intelligence-agent"
version = "0.1.0"
description = "A graph-based ADK 2.0 multi-agent system for optimizing event marketing budgets, predicting registrations, and generating assets."
requires-python = ">=3.11,<3.13"

dependencies = [
    "google-adk>=2.0.0a0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.34.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4.6",
    "mypy>=1.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["event_marketing_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
